# fps-c3d-descriptor

./: .gitignore  README.md
classification/: CMakeLists.txt  main.cpp
facebook/: list_generator.py
facebook/video_descriptor/: init.sh
facebook/video_descriptor/prototxt/: input_list_video.txt
facebook/video_formatter/: main.cpp
lasagne/: fetch_model.sh  uvc_sport1m.py
video_descriptor/: c3d_fourth_person_sensing.sh
video_descriptor/prototxt/: output_list_prefix.txt
video_formatter/: CMakeLists.txt
